# dumb-little-reader

./: constants.py  prompt.md  pyproject.toml
dumb-little-reader/: README.md  main.py  modal.toml  requirements.txt  shared_dependencies.md
dumb-little-reader/app/: endpoints.py  error_handling.py  main.py  models.py  rss_fetcher.py
dumb-little-reader/app/static/css/: styles.css
dumb-little-reader/app/templates/: feed_item.html  index.html
dumb-little-reader/app/tests/: test_endpoints.py  test_error_handling.py  test_rss_fetcher.py
dumb-little-reader/docs/: ai_developer_documentation.md  roadmap.md
