[tool.poetry]
name = "dumb-little-reader"
version = "0.1.0"
description = ""
authors = ["Alex Naka <alex.naka@gmail.com>"]
readme = "README.md"
packages = [{include = "dumb_little_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
openapi = "^1.1.0"
modal-client = "^0.49.2348"
fastapi = "^0.96.0"
pytest = "^7.3.1"
ipykernel = "^6.23.1"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
feedparser = "^6.0.10"
python-multipart = "^0.0.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
